--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".views.MainActivity">
+    xmlns:tools="http://schemas.android.com/tools">
+
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -14,9 +12,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:background="#E5E5E5"
-            tools:context=".ui.views.MainActivity">
+            tools:context=".views.MainActivity">
 
 
 
@@ -74,5 +70,5 @@
 
     </androidx.core.widget.NestedScrollView>
 
-</RelativeLayout>
+
 </layout>
